
        Note that the name has to be 'index.html' for the exception
        view to work. (patch by Sidnei da Silva from Enfold,
        integration by Martijn Faassen (Startifact) for Infrae)

      - DateTime now uses pytz for time zone data. This means support
        for more time zones and up to date daylight saving time
        information.

    Bugs Fixed

      - Launchpad #174705:  ensure that the error info object exposed to a
        'tal:on_error' handler has attributes visible to restricted code.

      - After the proper introduction of parent-pointers, it's now
        wrong to acquisition-wrap content providers. We will now use
        the "classic" content provider expression from Zope 3.
    
      - Testing.ZopeTestCase: Remove quota argument from DemoStorage calls in
        preparation for ZODB 3.9.

      - Ported c69896 to Five. This fix makes it possible to provide a
        template using Python, and not have it being set to `None` by
        the viewlet manager directive.
    
      - Made Five.testbrowser compatible with mechanize 0.1.7b.

      - Ensure that response header values cannot embed CRLF pairs, which
        violate the HTTP spec (RFC 2616).

      - Testing.ZopeTestCase: installPackage was tied to the ZopeLite layer.

      - Launchpad #280334: Fixed problem with 'timeout'
        argument/attribute missing in testbrowser tests.

      - Launchpad #282677: fixed implementation of guarded_map and
        provided tests and implementation for guarded_zip (RestrictedPython).

      - Lauchpad #143736,#271395: fixed AttributeError' on _ltid in TempStorage

      - 'AccessControl.ZopeGuards.guarded_import' mapped some Unauthorized
        exceptions onto ImportErrors:  don't do that!  Also, removed
        mutable defaults from argument list, improved tests.

      - LP #281156:  'AccessControl.SecurityInfo.secureModule' dropped
        ModuleSecurity for failed imports, obscuring later attempts to